--- a/01-hola-mundo/angular.json
+++ b/01-hola-mundo/angular.json
@@ -124,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "my-app"
+  "defaultProject": "my-app",
+  "cli": {
+    "analytics": "92cf89b5-8777-4a5a-9af0-c4f69ef5d4c0"
+  }
 }
