--- a/11-formularios/angular.json
+++ b/11-formularios/angular.json
@@ -120,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "formularios"
+    }
+  },
+  "defaultProject": "formularios",
+  "cli": {
+    "analytics": false
+  }
 }
